small tweak to ensure a consistent layout on smaller mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,13 +129,13 @@
     .background {
         opacity: 30%;
         border-radius: 50%;
-        height: 120px;
-        width: 120px;
+        height: 110px;
+        width: 110px;
         display: inline-block;
         text-align: center;
         margin-top: 10px;
-        margin-left:25px;
-        margin-right: 25px;
+        margin-left:20px;
+        margin-right: 20px;
     }
 }
 
